switched deployment to GH pages

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://SimpleValue.github.io
 title: Simple Value 
 subtitle: we develop simple and value oriented functional systems
 author: Simple Value 
